fixed a gap in the design that was driving me nuts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,10 @@ body {
 
 /* Top Right Art Deco */
 .top-right-container {
-    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: fixed;
     top: 0px;
     right: 0px;
 }
@@ -64,7 +67,10 @@ body {
 
 /* Bottom Right Art Deco */
 .bottom-right-container {
-    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: fixed;
     bottom: 0px;
     right: 0px;
 }
